--- a/src/app/core/components/aboutus-two/aboutus-two.component.html
+++ b/src/app/core/components/aboutus-two/aboutus-two.component.html
@@ -1,8 +1,8 @@
 
   
-  <section class="section" style="background-color: #e89f36" > 
+  <section class="section"  > 
     
-    <div class="container"  >
+    <div class="container"  style="font-family: 'PPEiko-Medium' !important;" >
       <div class="main-content pruebasBoton"  >
         <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"  style="color: black !important;" (click) = "touch(1);" >Spanish  </a>
             <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" style="color: black !important;"(click) = "touch(2);">English </a>
@@ -11,17 +11,17 @@
         
         <!--end col-->
   
-    <div class="main-content clase"  *ngIf="ContenedorEnglish">
+    <div class="main-content clase"  style="font-family: 'PPEiko-Medium' !important;"  *ngIf="ContenedorEnglish">
         <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
           <div class="ms-lg-4">
             <div class="d-flex mb-4">
-              <span class="text-primary h1 mb-0"><span class="counter-value display-1 fw-bold" [CountTo]="15" [from]="0"
+              <span class="text-primary h1 mb-0"  style="font-family: 'PPEiko-Medium' !important;"><span class="counter-value display-1 fw-bold" [CountTo]="15" [from]="0"
                   [duration]="4"></span>+</span>
               <span class="h6 align-self-end ms-2">Years <br> Experience</span>
             </div>
             <div class="section-title">
-              <h4 class="title mb-4">Who we are ?</h4>
-              <p class="text">MATERSANT is a conscious and innovative art house based on intention and fuelled by creative love & devotion.
+              <h4 class="title mb-4"  style="font-family: 'PPEiko-Medium' !important;">Who we are ?</h4>
+              <p class="text"  style="font-family: 'PPEiko-Medium' !important;">MATERSANT is a conscious and innovative art house based on intention and fuelled by creative love & devotion.
 
                 Our journey began in Honduras, where our souls first connected profoundly to Mother Nature and our family’s pure love. 
                 
@@ -32,7 +32,7 @@
                 From then onwards, our philosophy has been shaped to consider the whole with the self in everything we do. 
                 
                 </p>
-              <a href="javascript:void(0)" class="btn btn-primary mt-3">Contact us</a>
+              <a href="javascript:void(0)" class="btn btn-primary mt-3"  style="font-family: 'PPEiko-Medium' !important;">Contact us</a>
               
             </div>
           </div>
