--- a/src/app/core/components/shop-product-detail/shop-product-detail.component.html
+++ b/src/app/core/components/shop-product-detail/shop-product-detail.component.html
@@ -11,49 +11,27 @@
                     alt=""></div>
               </div>
             </ng-template>
-            <ng-template carouselSlide>
-              <div class="tiny-slide">
-                <div class="tiny-slide"><img src="assets/images/shop/product/single-3.jpg" class="img-fluid rounded"
-                    alt=""></div>
-              </div>
-            </ng-template>
-            <ng-template carouselSlide>
-              <div class="tiny-slide">
-                <div class="tiny-slide"><img src="assets/images/shop/product/single-4.jpg" class="img-fluid rounded"
-                    alt=""></div>
-              </div>
-            </ng-template>
-            <ng-template carouselSlide>
-              <div class="tiny-slide">
-                <div class="tiny-slide"><img src="assets/images/shop/product/single-5.jpg" class="img-fluid rounded"
-                    alt=""></div>
-              </div>
-            </ng-template>
-            <ng-template carouselSlide>
-              <div class="tiny-slide">
-                <div class="tiny-slide"><img src="assets/images/shop/product/single-6.jpg" class="img-fluid rounded"
-                    alt=""></div>
-              </div>
-            </ng-template>
+           
+            
           </owl-carousel-o>
         </div>
         <!--end col-->
   
-        <div class="col-md-7 mt-4 mt-sm-0 pt-2 pt-sm-0">
+        <div class="col-md-7 mt-4 mt-sm-0 pt-2 pt-sm-0"  style="font-family: 'PPEiko-Medium' !important;">
           <div class="section-title ms-md-4">
             <div class="padding">
-            <h4 class="title">NOMBRE DEL PRODUCTO</h4>
-            <h5 class="text-muted">Nombre del Diseñador/Artista </h5>
-            <h6 class="text-muted">$21.00 </h6>
+            <h4 class="title"  style="font-family: 'PPEiko-Medium' !important;" >NOMBRE DEL PRODUCTO</h4>
+            <h5 class="text-muted"  style="font-family: 'PPEiko-Medium' !important;">Nombre del Diseñador/Artista </h5>
+            <h6 class="text-muted"  style="font-family: 'PPEiko-Medium' !important;">$21.00 </h6>
             <br> <br>
-            <p class="text">Descripcion del producto </p>
-            <p class="text">Producción</p>
+            <p class="text"  style="font-family: 'PPEiko-Medium' !important;">Descripcion del producto </p>
+            <p class="text"  style="font-family: 'PPEiko-Medium' !important;"> Producción</p>
             <br> <br> <br> <br> <br> <br>
-            <a class="botones" routerLink="/shop-cart" style= "color: black;" >ADD TO WISHLIST</a>
+            <a class="botones" routerLink="/shop-cart" style= "color: black;" >ADD TO CART</a>
            <br> 
-            <a class="botones" routerLink="/shop-cart" style= "color: black;" >SHARE</a>
+            <a class="botones" routerLink="/shop-cart" style= "color: black;" >ADD TO WISHLIST</a>
             <br> 
-            <a class="botones" routerLink="/shop-cart" style= "color: black;" >REQUEST PRODUCT SHEET</a>
+            <a class="botones" routerLink="/shop-cart" style= "color: black;" >SHARE</a>
           </div>
           </div>
         </div>
@@ -68,13 +46,13 @@
     <div class="related full-width fadeOnScroll fadeOnScrollFromBottom in-view   container mt-100 mt-60">
       <div class="row">
         <div class="col-12">
-          <h5 class="relatedpro mb-0">Related Products</h5>
+          <h5 class="relatedpro mb-0"  style="font-family: 'PPEiko-Medium' !important;">Related Products</h5>
         </div>
         <!--end col-->
   
-        <div class="col-12 mt-4">
-          <owl-carousel-o id="customer-testi" [options]="customOptions">
-            <ng-template carouselSlide>
+        <div class="col-12 mt-4" >
+          <owl-carousel-o id="customer-testi" [options]="customOptions" >
+            <ng-template carouselSlide> 
               <div class="card shop-list border-0 position-relative overflow-hidden m-2">
                 <div class="shop-image position-relative overflow-hidden rounded shadow">
                   <a data-aos="fade-in"  routerLink="/shop-product-detail"><img src="assets/images/shop/product/s1.jpg" class="img-fluid"
@@ -91,7 +69,7 @@
                 </div>
               </div>
             </ng-template>
-            <ng-template carouselSlide>
+            <ng-template carouselSlide >
               <div class="card shop-list border-0 position-relative overflow-hidden m-2">
                 <div class="shop-image position-relative overflow-hidden rounded shadow">
                   <a  data-aos="fade-in" routerLink="/shop-product-detail"><img src="assets/images/shop/product/s3.jpg" class="img-fluid"
@@ -100,10 +78,10 @@
                     <img src="assets/images/shop/product/s-3.jpg" class="img-fluid" alt="">
                   </a>
                 </div>
-                <div class="card-body content pt-4 p-2">
-                  <a  data-aos="fade-in"  routerLink="/shop-product-detail" class="text-dark product-name h6">Elegent Watch</a>
+                <div class="card-body content pt-4 p-2" >
+                  <a  data-aos="fade-in"   style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-product-detail" class="text-dark product-name h6">Elegent Watch</a>
                   <div class="d-flex justify-content-between mt-1">
-                    <h6 class="text-muted small fst-italic mb-0 mt-1">$4.50 
+                    <h6 class="text-muted small fst-italic mb-0 mt-1"  style="font-family: 'PPEiko-Medium' !important;">$4.50 
                     </h6>
                   
                   </div>
@@ -120,9 +98,9 @@
                   </a>
                 </div>
                 <div class="card-body content pt-4 p-2">
-                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6">Elegent Mug</a>
+                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6"  style="font-family: 'PPEiko-Medium' !important;">Elegent Mug</a>
                   <div class="d-flex justify-content-between mt-1">
-                    <h6 class="text-muted small fst-italic mb-0 mt-1">$4.50 
+                    <h6 class="text-muted small fst-italic mb-0 mt-1"  style="font-family: 'PPEiko-Medium' !important;">$4.50 
                     </h6>
                    
                   </div>
@@ -139,9 +117,9 @@
                   </a>
                 </div>
                 <div class="card-body content pt-4 p-2">
-                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6">Wooden Stools</a>
+                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6"  style="font-family: 'PPEiko-Medium' !important;">Wooden Stools</a>
                   <div class="d-flex justify-content-between mt-1">
-                    <h6 class="text-muted small fst-italic mb-0 mt-1">$22.00
+                    <h6 class="text-muted small fst-italic mb-0 mt-1"  style="font-family: 'PPEiko-Medium' !important;">$22.00
                     </h6>
                   
                   </div>
@@ -158,9 +136,9 @@
                   </a>
                 </div>
                 <div class="card-body content pt-4 p-2">
-                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6">Women Block Heels</a>
+                  <a  data-aos="fade-in" routerLink="/shop-product-detail" class="text-dark product-name h6"  style="font-family: 'PPEiko-Medium' !important;">Women Block Heels</a>
                   <div class="d-flex justify-content-between mt-1">
-                    <h6 class="text-muted small fst-italic mb-0 mt-1">$21.00 
+                    <h6 class="text-muted small fst-italic mb-0 mt-1"  style="font-family: 'PPEiko-Medium' !important;">$21.00 
                     </h6>
                   
                   </div>
