--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -132,8 +132,8 @@
                         <script type="text/javascript" id="www-widgetapi-script"
                             src="https://www.youtube.com/s/player/5d56cf74/www-widgetapi.vflset/www-widgetapi.js"
                             async=""></script>
-                            <script type="text/javascript" id="www-widgetapi-script" src="https://www.youtube.com/s/player/5d56cf74/www-widgetapi.vflset/www-widgetapi.js" async=""></script>
-                            <script id="iframe_api" src="https://www.youtube.com/iframe_api"></script> {{year}} Matersant. Diseñado por <a href="https://www.ima.com.gt" class="text-reset">IMA</a>.
+                            <script  style="font-family: 'PPEiko-Thin' !important;"  type="text/javascript" id="www-widgetapi-script" src="https://www.youtube.com/s/player/5d56cf74/www-widgetapi.vflset/www-widgetapi.js" async=""></script>
+                            <script id="iframe_api" src="https://www.youtube.com/iframe_api" style="font-family: 'PPEiko-Medium' !important;" ></script> {{year}} Matersant. Diseñado por <a href="https://www.ima.com.gt" class="text-reset"  style="font-family: 'PPEiko-Thin' !important;" >IMA</a>.
         
                     </p>
                 </div>
