--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -26,13 +26,13 @@
           </div>
           <div id="navigation">
               <!-- Navigation Menu-->
-              <ul class="navigation-menu" [class]="navClass" style="font-family: 'PPEiko-Thin' !important;">
+              <ul class="navigation-menu" [class]="navClass" >
                   <!-- <li><a routerLink="/" class="nav-link-ref">HOME</a></li> -->
                                 
                   <li class="has-submenu ">
-                      <a href="javascript:void(0)" (click)="onMenuClick($event)">SERVICES</a><span class="menu-arrow"></span>
+                      <a href="javascript:void(0)" (click)="onMenuClick($event) " style="font-family: 'PPEiko-Medium' !important;" >SERVICES</a><span class="menu-arrow"></span>
                 
-                      <ul class="submenu megamenu">
+                      <ul class="submenu megamenu "  style="font-family: 'PPEiko-Medium' !important;">
                         <li>
                           <ul>
                             <li class="megamenu-head "  style="color: red !important; ">CASA MATERSANT</li>
@@ -47,10 +47,10 @@
     
                         <li>
                           <ul>
-                            <li class="megamenu-head"  style="color: #e89f36 !important; "  >MATERIA CURADA</li>
-                            <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
-                            <li><a class="nav-link-ref" routerLink="/materia-decor"> HOME DECOR</a></li>
-                            <li><a class="nav-link-ref" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
+                            <li class="megamenu-head"  style="color: #e89f36 !important; font-family: 'PPEiko-Medium' !important;" >MATERIA CURADA</li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/art-materia">ART</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/materia-decor"> HOME DECOR</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
                           </ul>
                         </li>
     
@@ -60,7 +60,7 @@
                     </li>
                  
                     
-                    <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
+                    <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
                    </ul>
             
           </div>
@@ -82,9 +82,9 @@
           <div id="navigation">
               <!-- Navigation Menu-->
             <div class="positionHeader">
-              <ul class="  navigation-menu" [class]="navClass" style="font-family: 'PPEiko-Thin' !important;">
-                  <li  class=" has-submenu ">
-                      <a href="javascript:void(0)" (click)="onMenuClick($event)">PRODUCTS</a><span class="menu-arrow"></span>
+              <ul class="  navigation-menu" [class]="navClass" style="font-family: 'PPEiko-Medium' !important;">
+                  <li  class=" has-submenu " >
+                      <a href="javascript:void(0)" (click)="onMenuClick($event)" style="font-family: 'PPEiko-Medium' !important;">PRODUCTS</a><span class="menu-arrow"></span>
                       <!-- MENU DE NORMAL -->
   
                       <ul class="  submenu megamenu " style="background-color: #ffffff;">
@@ -92,13 +92,13 @@
                         <li style="width: 50%;">
                           <div class="matersant" style=" background-color: #ffffff ">
                           <ul>
-                            <li class="casamatersant megamenu-head " style="color: white !important;" >CASA MATERSANT</li>
-                            <li><a class="nav-link-ref" routerLink="/shop-wall">WALL ART</a></li>
-                            <li><a class="nav-link-ref" routerLink="/shop-furniture">FURNITURE</a></li>
-                            <li><a class="nav-link-ref" routerLink="/matersant-decor">HOME DECOR</a></li>
-                            <li><a class="nav-link-ref" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
-                            <li><a class="nav-link-ref" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
-                            <li><a class="nav-link-ref" routerLink="/index-upcycle">NFT</a></li>
+                            <li class="casamatersant megamenu-head " style="color: white !important; font-family: 'PPEiko-Medium' !important;" >CASA MATERSANT</li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-wall">WALL ART</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-furniture">FURNITURE</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/matersant-decor">HOME DECOR</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/matersant-finishing">HOME FINISHINGS</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/shop-accesories">CLOTHING + ACCESSORIES</a></li>
+                            <li><a class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;" routerLink="/index-upcycle">NFT</a></li>
                           </ul>
                           
                         </div>
@@ -106,10 +106,10 @@
                         <li style="width: 48%;">
                           <div class="mcurada" style="background-color: #ffffff ">
                           <ul>
-                            <li class="materiacurada megamenu-head"  style="color: white !important;" >MATERIA CURADA</li>
-                            <li><a class="nav-link-ref" routerLink="/art-materia">ART</a></li>
-                            <li><a class="nav-link-ref" routerLink="/materia-decor"> HOME DECOR</a></li>
-                            <li><a class="nav-link-ref" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
+                            <li class="materiacurada megamenu-head"  style="color: white !important; font-family: 'PPEiko-Medium' !important;" >MATERIA CURADA</li>
+                            <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/art-materia">ART</a></li>
+                            <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/materia-decor"> HOME DECOR</a></li>
+                            <li><a class="nav-link-ref"  style="font-family: 'PPEiko-Medium' !important;" routerLink="/accesories-materia">CLOTHING + ACCESSORIES</a></li>
                           </ul>
                         </div>
                         </li>
@@ -121,7 +121,7 @@
                     </li>
               
                   <li class="has-submenu ">
-                    <a href="javascript:void(0)" (click)="onMenuClick($event)">SERVICES</a><span class="menu-arrow"></span>
+                    <a href="javascript:void(0)" (click)="onMenuClick($event)"  style="font-family: 'PPEiko-Medium' !important;">SERVICES</a><span class="menu-arrow"></span>
                
                
                     <ul class="submenu megamenu" style="background-color: #ffffff ;">
@@ -131,7 +131,7 @@
                         <ul>
                           <li class="productdesign megamenu-head"  style="color: white !important" >PRODUCT DESIGN</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-grid-two">PORTFOLIO</a></li>
-                          <li><a class="nav-link-ref" routerLink="/custome-made">CUSTOM-MAKE YOUR OWN PIECE</a></li>
+                          <li><a class="nav-link-ref" routerLink="">CUSTOM-MAKE YOUR OWN PIECE</a></li>
                         </ul>
                       </div>
                       </li>
@@ -150,7 +150,7 @@
                         <ul>
                           <li class="art megamenu-head"  style="color: white !important;">ART</li>
                           <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
-                          <li><a class="nav-link-ref" routerLink="/portfolio-masonry-three">COMMISION ART</a>
+                          <li><a class="nav-link-ref" routerLink="/custome-made">COMMISION ART</a>
 
                           <li> 
                           </li>
@@ -160,7 +160,7 @@
                     </ul>
                     
                   </li>
-                  <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Thin' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
+                  <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
               </ul>
             </div>
   
