--- a/src/app/core/components/custom-made-art/custom-made.component.html
+++ b/src/app/core/components/custom-made-art/custom-made.component.html
@@ -33,7 +33,7 @@
           <!--end row-->
           <app-services [servicesData]="servicesData"></app-services>
           <!--<div class="main-content clase"  *ngIf="ContenedorPrincipal">-->
-          <div class="container mt-100 mt-60" style="color: white !important;">
+          <div class="container mt-100 mt-60" style="color: white !important; font-family: 'PPEiko-Medium' !important;">
             <div class="col-lg-7 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
               <div class="section-title ms-lg-5">
                 <h4 class="title mb-4" data-aos="fade-up" data-aos-duration="1000">CUSTOM-MADE ART</h4>
