--- a/src/app/core/components/aboutus-two/aboutus-two.component.html
+++ b/src/app/core/components/aboutus-two/aboutus-two.component.html
@@ -4,8 +4,8 @@
     
     <div class="container"  style="font-family: 'PPEiko-Medium' !important;" >
       <div class="main-content pruebasBoton"  >
-        <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"  style="color: black !important;" (click) = "touch(1);" >Spanish  </a>
-            <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" style="color: black !important;"(click) = "touch(2);">English </a>
+        <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"  style="color: black !important;" (click) = "touch(1);" >SP  </a>
+            <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" style="color: black !important;"(click) = "touch(2);">EN </a>
       </div>
       <div class="row align-items-center" id="counter">
         
@@ -14,11 +14,7 @@
     <div class="main-content clase"  style="font-family: 'PPEiko-Medium' !important;"  *ngIf="ContenedorEnglish">
         <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
           <div class="ms-lg-4">
-            <div class="d-flex mb-4">
-              <span class="text-primary h1 mb-0"  style="font-family: 'PPEiko-Medium' !important;"><span class="counter-value display-1 fw-bold" [CountTo]="15" [from]="0"
-                  [duration]="4"></span>+</span>
-              <span class="h6 align-self-end ms-2">Years <br> Experience</span>
-            </div>
+           
             <div class="section-title">
               <h4 class="title mb-4"  style="font-family: 'PPEiko-Medium' !important;">Who we are ?</h4>
               <p class="text"  style="font-family: 'PPEiko-Medium' !important;">MATERSANT is a conscious and innovative art house based on intention and fuelled by creative love & devotion.
@@ -41,13 +37,9 @@
       <div class="main-content clase"  *ngIf="ContenedorSpanish">
         <div class="col-md-6 mt-4 pt-2 mt-sm-0 pt-sm-0">
           <div class="ms-lg-4">
-            <div class="d-flex mb-4">
-              <span class="text-primary h1 mb-0"><span class="counter-value display-1 fw-bold" [CountTo]="15" [from]="0"
-                  [duration]="4"></span>+</span>
-              <span class="h6 align-self-end ms-2">Years <br> Experience</span>
-            </div>
+           
             <div class="section-title">
-              <h4 class="title mb-4">¿Quienes Somos?</h4>
+              <h4 class="title mb-4"  style="font-family: 'PPEiko-Medium' !important;" >¿Quienes Somos?</h4>
               <p class="text">MATERSANT es una casa innovadora de arte consciente basada en la intención; Impulsada por la creatividad, el amor y la devoción.
 
                 Nuestro viaje comenzó en Honduras, donde nuestras almas se conectaron profundamente con la Madre Tierra y el amor puro de nuestra familia. 
