--- a/src/app/core/components/custom-made-art/custom-made.component.html
+++ b/src/app/core/components/custom-made-art/custom-made.component.html
@@ -32,8 +32,15 @@
           </div>
           <!--end row-->
           <app-services [servicesData]="servicesData"></app-services>
+          
           <!--<div class="main-content clase"  *ngIf="ContenedorPrincipal">-->
+            <div class="main-content traduction"  >
+              <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded"  style="color:white!important;" (click) = "touch(1);" >SP  </a>
+                  <a href="javascript:void(0)" class="text-primary p-1 px-2 shadow rounded" style="color: white !important;"(click) = "touch(2);">EN </a>
+            </div>
           <div class="container mt-100 mt-60" style="color: white !important; font-family: 'PPEiko-Medium' !important;">
+            
+
             <div class="col-lg-7 col-md-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
               <div class="section-title ms-lg-5">
                 <h4 class="title mb-4" data-aos="fade-up" data-aos-duration="1000">CUSTOM-MADE ART</h4>
