--- a/src/app/core/components/index-studio/index-studio.component.html
+++ b/src/app/core/components/index-studio/index-studio.component.html
@@ -11,22 +11,15 @@
                     
                     <div class="container">
                         <div class="row align-items-center mt-5">
-                                           
 
-<!--Prueba-->
-
-
-
-<!--Prueba-->
 
                             <div class="col-lg-7 col-md-7">
                                 <div class="title-heading mt-4">
-                                    <h1 class="display-4 title-white fw-bold mb-3">Titulo 1</h1>
+                                    <h1 class="display-4 title-white fw-bold mb-3"  style="font-family: 'PPEiko-Medium' !important;">Titulo 1</h1>
                                   <!--  <input type ="checkbox" id ="cerrar">
                                    <label for= "cerrar" id= "btn-cerrar">x</label>-->
-                                    <p class="para-desc text-muted para-dark">Launch your campaign and benefit from our expertise on designing and managing conversion centered bootstrap v5 html page.</p>
-                                    <a href="javascript:void(0)" data-bs-toggle="modal" class="btn btn-primary m-1"
-                                   >Welcome</a>
+                                    <p class="para-desc text-muted para-dark"  style="font-family: 'PPEiko-Medium' !important;">Launch your campaign and benefit from our expertise on designing and managing conversion centered bootstrap v5 html page.</p>
+                                    <a href="javascript:void(0)" data-bs-toggle="modal" class="btn btn-primary m-1"  style="font-family: 'PPEiko-Medium' !important;">Welcome</a>
                   
             
                 
