--- a/src/app/core/components/portfolio-masonry-two/portfolio-masonry-two.component.html
+++ b/src/app/core/components/portfolio-masonry-two/portfolio-masonry-two.component.html
@@ -50,7 +50,7 @@
         <!--end row-->
 
         <div id="grid" class="row">
-            <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2 picture-item" data-groups='["branding"]'  routerLink="/shop-product-detail-two"
+            <div class="col-lg-4 col-md-6 col-12 mt-4 pt-2 picture-item" data-groups='["branding"]'  routerLink="/detail-two"
                 *ngFor="let item of filterredImages">
                 <div class="card work-container work-modern position-relative overflow-hidden shadow rounded border-0">
                     <div class="card-body p-0">
