--- a/src/app/core/components/shop-cart/shop-cart.component.html
+++ b/src/app/core/components/shop-cart/shop-cart.component.html
@@ -1,19 +1,10 @@
 <!-- Hero Start -->
-<section class="bg-half bg-light d-table w-100" id="home">
+<section  class="bg-half bg-light d-table w-100" id="home">
     <div class="container">
-      <div class="row justify-content-center">
+      <div  class="row justify-content-center">
         <div class="col-lg-12 text-center">
           <div class="page-next-level">
-            <h4 class="title"> Shopping Cart </h4>
-            <div class="page-next">
-              <nav aria-label="breadcrumb" class="d-inline-block">
-                <ul class="breadcrumb bg-white rounded shadow mb-0">
-                  <li class="breadcrumb-item"><a routerLink="/index">Landrick</a></li>
-                  <li class="breadcrumb-item"><a routerLink="/index-shop">Shop</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Cart</li>
-                </ul>
-              </nav>
-            </div>
+            <h4 class="title"  style="font-family: 'PPEiko-Medium' !important;"> Your Cart </h4>
           </div>
         </div>
         <!--end col-->
@@ -33,16 +24,16 @@
   <!-- Hero End -->
   
   <!-- Start -->
-  <section class="section">
+  <section class="section"  style="font-family: 'PPEiko-Medium' !important;">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <div class="table-responsive bg-white shadow">
-            <table class="table table-center table-padding mb-0">
+            <table  class="table table-center table-padding mb-0" >
               <thead>
-                <tr>
+                <tr >
                   <th class="border-bottom py-3" style="min-width:20px "></th>
-                  <th class="border-bottom py-3" style="min-width: 300px;">Product</th>
+                  <th class="border-bottom py-3" style="min-width: 300px;" style="font-family: 'PPEiko-Medium' !important;" >Product</th>
                   <th class="border-bottom text-center py-3" style="min-width: 160px;">Price</th>
                   <th class="border-bottom text-center py-3" style="min-width: 160px;">Qty</th>
                   <th class="border-bottom text-center py-3" style="min-width: 160px;">Total</th>
@@ -50,13 +41,13 @@
               </thead>
   
               <tbody>
-                <tr class="shop-list">
-                  <td class="h6"><a href="javascript:void(0)" class="text-danger">X</a></td>
+                <tr class="shop-list" >
+                
                   <td>
                     <div class="d-flex align-items-center">
                       <img src="assets/images/shop/product/s1.jpg" class="img-fluid avatar avatar-small rounded shadow"
                         style="height:auto;" alt="">
-                      <h6 class="mb-0 ms-3">T-Shirt</h6>
+                      <h6 class="mb-0 ms-3" style="font-family: 'PPEiko-Medium' !important;">T-Shirt</h6>
                     </div>
                   </td>
                   <td class="text-center">$ 255.00</td>
@@ -72,12 +63,11 @@
                 </tr>
   
                 <tr class="shop-list">
-                  <td class="h6"><a href="javascript:void(0)" class="text-danger">X</a></td>
                   <td>
                     <div class="d-flex align-items-center">
                       <img src="assets/images/shop/product/s3.jpg" class="img-fluid avatar avatar-small rounded shadow"
                         style="height:auto;" alt="">
-                      <h6 class="mb-0 ms-3">Branded Watch</h6>
+                      <h6 class="mb-0 ms-3" style="font-family: 'PPEiko-Medium' !important;">Branded Watch</h6>
                     </div>
                   </td>
                   <td class="text-center">$ 520.00</td>
@@ -93,12 +83,11 @@
                 </tr>
   
                 <tr class="shop-list">
-                  <td class="h6"><a href="javascript:void(0)" class="text-danger">X</a></td>
                   <td>
                     <div class="d-flex align-items-center">
                       <img src="assets/images/shop/product/s6.jpg" class="img-fluid avatar avatar-small rounded shadow"
                         style="height:auto;" alt="">
-                      <h6 class="mb-0 ms-3">T-Shirt</h6>
+                      <h6 class="mb-0 ms-3"  style="font-family: 'PPEiko-Medium' !important;">T-Shirt</h6>
                     </div>
                   </td>
                   <td class="text-center">$ 160.00</td>
@@ -114,12 +103,11 @@
                 </tr>
   
                 <tr class="shop-list">
-                  <td class="h6"><a href="javascript:void(0)" class="text-danger">X</a></td>
                   <td>
                     <div class="d-flex align-items-center">
                       <img src="assets/images/shop/product/s10.jpg" class="img-fluid avatar avatar-small rounded shadow"
                         style="height:auto;" alt="">
-                      <h6 class="mb-0 ms-3">Sunglasses</h6>
+                      <h6 class="mb-0 ms-3"  style="font-family: 'PPEiko-Medium' !important;">Sunglasses</h6>
                     </div>
                   </td>
                   <td class="text-center">$ 260.00</td>
@@ -150,15 +138,15 @@
             <table class="table table-center table-padding mb-0">
               <tbody>
                 <tr>
-                  <td class="h6">Subtotal</td>
+                  <td class="h6" style="font-family: 'PPEiko-Medium' !important;">Subtotal</td>
                   <td class="text-center fw-bold">$ 2190</td>
                 </tr>
                 <tr>
-                  <td class="h6">Taxes</td>
+                  <td class="h6"  style="font-family: 'PPEiko-Medium' !important;">Taxes</td>
                   <td class="text-center fw-bold">$ 219</td>
                 </tr>
                 <tr class="bg-light">
-                  <td class="h6">Total</td>
+                  <td class="h6"  style="font-family: 'PPEiko-Medium' !important;">Total</td>
                   <td class="text-center fw-bold">$ 2409</td>
                 </tr>
               </tbody>
