--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -130,7 +130,7 @@
                         <div class="contenedor3">
                         <ul>
                           <li class="productdesign megamenu-head"  style="color: white !important" >PRODUCT DESIGN</li>
-                          <li><a class="nav-link-ref" routerLink="/portfolio-grid-two">PORTFOLIO</a></li>
+                          <li><a class="nav-link-ref" routerLink="/portfolio-masonry-two">PORTFOLIO</a></li>
                           <li><a class="nav-link-ref" routerLink="">CUSTOM-MAKE YOUR OWN PIECE</a></li>
                         </ul>
                       </div>
@@ -160,8 +160,87 @@
                     </ul>
                     
                   </li>
-                  <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;">ABOUT</a> </li> <span class="menu-arrow"></span>
+                  <li><a routerLink="/aboutus" class="nav-link-ref" style="font-family: 'PPEiko-Medium' !important;">ABOUT</a> </li> <span class="menu-arrow"></span> 
+                  <ul class="buy-button list-inline mb-0" >
+    
+                    <li  style="font-family: 'PPEiko-Medium' !important;" class=" list-inline-item mb-0 pe-1">
+                      <div class="dropdown" ngbDropdown>
+                        <button type="button" class="btn btn-icon btn-soft-primary dropdown-toggle" ngbDropdownToggle data-bs-toggle="dropdown"
+                          aria-haspopup="true" aria-expanded="false"><i
+                            class="uil uil-shopping-cart align-middle icons"></i></button>
+                        <div class="dropdown-menu dd-menu dropdown-menu-end bg-white shadow rounded border-0 mt-3 p-4" ngbDropdownMenu
+                          style="width: 300px;">
+                          <div class="pb-4">
+                            <a href="javascript:void(0)" class="d-flex align-items-center">
+                              <img src="assets/images/shop/product/s-1.jpg" class="shadow rounded" style="max-height: 64px;" alt="">
+                              <div  class="flex-1 text-start ms-3">
+                                <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;" >T-shirt (M)</h6>
+                                <p class="text-muted mb-0" style="font-family: 'PPEiko-Medium' !important;">$320 X 2</p>
+                              </div>
+                              <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">$640</h6>
+                            </a>
+            
+                            <a href="javascript:void(0)" class="d-flex align-items-center mt-4">
+                              <img src="assets/images/shop/product/s-2.jpg" class="shadow rounded" style="max-height: 64px;" alt="">
+                              <div class="flex-1 text-start ms-3">
+                                <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">Bag</h6>
+                                <p class="text-muted mb-0"  style="font-family: 'PPEiko-Medium' !important;">$50 X 5</p>
+                              </div>
+                              <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">$250</h6>
+                            </a>
+            
+                            <a href="javascript:void(0)" class="d-flex align-items-center mt-4">
+                              <img src="assets/images/shop/product/s-3.jpg" class="shadow rounded" style="max-height: 64px;" alt="">
+                              <div class="flex-1 text-start ms-3">
+                                <h6 class="text-dark mb-0" style="font-family: 'PPEiko-Medium' !important;" >Watch (Men)</h6>
+                                <p class="text-muted mb-0"  style="font-family: 'PPEiko-Medium' !important;">$800 X 1</p>
+                              </div>
+                              <h6 class="text-dark mb-0" style="font-family: 'PPEiko-Medium' !important;" >$800</h6>
+                            </a>
+                          </div>
+            
+                          <div class="d-flex align-items-center justify-content-between pt-4 border-top">
+                            <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">Total($):</h6>
+                            <h6 class="text-dark mb-0"  style="font-family: 'PPEiko-Medium' !important;">$1690</h6>
+                          </div>
+            
+                          <div class="mt-3 text-center">
+                            <a href="/shop-cart" class="btn btn-primary me-2"  style="font-family: 'PPEiko-Medium' !important;">View Cart</a>
+                            <a href="javascript:void(0)" class="btn btn-primary" style="font-family: 'PPEiko-Medium' !important;">Checkout</a>
+                          </div>
+                          <p class="text-muted text-start mt-1 mb-0"  style="font-family: 'PPEiko-Medium' !important;">*T&amp;C Apply</p>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="list-inline-item mb-0 pe-1">
+                      <a href="javascript:void(0);" class="btn btn-icon btn-soft-primary" (click)="wishListModal(content)"><i
+                          class="uil uil-heart align-middle icons"></i></a>
+                    </li>
+            
+                    <ng-template #content>
+                      <div class="modal-content rounded shadow-lg border-0 overflow-hidden" >
+                        <div class="modal-body py-5">
+                          <div class="text-center">
+                            <div class="icon d-flex align-items-center justify-content-center bg-soft-danger rounded-circle mx-auto"
+                              style="height: 95px; width:95px;">
+                              <h1 class="mb-0"><i class="uil uil-heart-break align-middle"></i></h1>
+                            </div>
+                            <div class="mt-4">
+                              <h4  style="font-family: 'PPEiko-Medium' !important;" >Your wishlist is empty.</h4>
+                              <p class="text-muted"  style="font-family: 'PPEiko-Medium' !important;">Create your first wishlist request...</p>
+                              <div class="mt-4">
+                                <a href="javascript:void(0)" class="btn btn-outline-primary" style="font-family: 'PPEiko-Medium' !important;" >+ Create new wishlist</a>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </ng-template>
+            
+                  </ul>
+            
               </ul>
+              
             </div>
   
              
